# PythonPoetryProject

./: .coverage  .gitignore  code_test  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: main.yml
.pytest_cache/v/cache/: nodeids
_sources/: index.rst.txt
_sources/docs/: index.rst.txt
docs/: conf.py  index.html
docs/PythonPoetryProject/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
docs/PythonPoetryProject/.doctrees/: environment.pickle  index.doctree
docs/docs/: conf.py
docs1/: conf.py  project.rst
docs1/_build/html/: genindex.html  index.html  modules.html  objects.inv  project.html  py-modindex.html  search.html  searchindex.js  tests.html
docs1/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree  project.doctree  tests.doctree
docs1/_build/html/_sources/: index.rst.txt  modules.rst.txt  tests.rst.txt
project/: code.py  code1  code1.py  code2.py  project - Shortcut.lnk
tests/: code_test  code_test.py
