[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Elena-aljebrin <elena.al-jebrin.etu@univ-lille.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.2"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
