[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Elena-aljebrin <elena.al-jebrin.etu@univ-lille.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.2"
coverage = "^7.3.2"
pylint = "^3.0.1"
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]